# mim

./: .gitignore  Cargo.toml  README.md  output.txt  utf_test.txt
src/: editor.rs  main.rs
src/editor/: buffer.rs  command.rs  commandbar.rs  editorcommand.rs  messagebar.rs  statusbar.rs  terminal.rs  uicomponent.rs  view.rs
src/editor/view/: buffer.rs  line.rs  location.rs
