[package]
name = "mim"
version = "0.1.0"
edition = "2021"
# = "0.27.0" [dependencies] crossterm = "0.27.0" [dependencies] crossterm = "0.27.0" [dependencies] crossterm = "0.27.0" [dependencies] crossterm = "0.27.0" [dependencies] crossterm = "0.27.0" [dependencies] crossterm = "0.27.0"

[dependencies]
crossterm = "0.27.0"
log = "0.4.21"
simplelog = "0.12.2"
unicode-segmentation = "1.11.0"
unicode-width = "0.1.13"

